# bsky-post-notifs-bot

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bacon.toml  data.db  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: rust.yml
.sqlx/: query-168f6621cca961de8ad6e5a4318b8a1bd7633a6b80ff14dd5da1202b9f11e209.json  query-4348fa7259474407ca99c295ecf3a4b47b29df1ed6408f3a7ff5e1425209e014.json  query-606f55142ac1221f00faf7d11ce6670a8ce153bbb1b95e939be83697531d0490.json  query-9ff3d1d0a3e7339cb3f55baaae014ee7d22bf1a2cfa6a7790fca4880efc78c45.json  query-dc0ef2510897c93792e5f8e534e2f2c5380013bdfd2a5e89bea0ac9fe489bc7c.json
src/app/: Cargo.toml  build.rs  main.rs
src/app/core/: main.rs  on_shutdown.rs  peek_users.rs
src/app/migrations/: 20240904042449_Base.down.sql  20240904042449_Base.up.sql
src/other/bsky/: Cargo.toml  fetch_messages.rs  get_last_post_time.rs  get_messages.rs  get_profile.rs  get_profiles.rs  get_unread_convos.rs  get_unread_dms.rs  get_user_convo.rs  lib.rs  login.rs  notify_watchers.rs  read_convo.rs  send_message.rs
src/other/environment/: Cargo.toml  environment.rs  lib.rs
src/other/repositories/: Cargo.toml  lib.rs
src/other/repositories/watched_user/: delete.rs  get_all.rs  get_watched_users.rs  mod.rs  remove_if_found.rs  update.rs  watching.rs
src/other/repositories/watched_user/db/: create.rs  delete.rs  get.rs  insert_watcher.rs  mod.rs  remove_watcher.rs
src/other/services/: Cargo.toml  check_users_for_posts.rs  commands.rs  fetch_watched_by.rs  handle_pending_messages.rs  handle_unanswered_convos.rs  handle_user_unwatched.rs  lib.rs  listen_for_commands.rs  notify_watchers.rs  pending_messages.rs  resolve_dids_and_handles.rs  resolve_handles.rs  unanswered_convos.rs  unwatch_users.rs  user_unwatched.rs  watch_new_users.rs  watch_users_for_posts.rs
src/other/services/commands/: help.rs  invalid.rs  list_watched.rs  mod.rs  unknown.rs  unwatch.rs  watch.rs
src/other/services/jobs/: command_issuer.rs  command_listener.rs  mod.rs  user_watcher.rs
src/other/services/notify/: mod.rs  watched_user.rs  watcher.rs
src/other/session/: Cargo.toml  lib.rs  login.rs
src/other/types/: Cargo.toml
src/other/types/entities/: mod.rs  watched_user.rs
src/other/utils/: Cargo.toml  canonicalize_unexistent.rs  constants.rs  handle_api_failure.rs  handle_union.rs  init_logging.rs  lib.rs
