[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "core/main.rs"

[lints]
workspace = true

[dependencies]
environment = { path = "../other/environment" }
repositories = { path = "../other/repositories" }
services = { path = "../other/services" }
tracing = "^0.1"
tokio = { version = "^1.37", features = ["rt-multi-thread", "signal"] }
dotenv = "^0.15"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
utils = { path = "../other/utils" }

[target.'cfg(unix)'.dependencies]
jemallocator = "^0.5"
