[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "core/main.rs"

[lints]
workspace = true

[dependencies]
environment.workspace = true
repositories.workspace = true
services.workspace = true
tracing.workspace = true
tokio.workspace = true
dotenv.workspace = true
sqlx.workspace = true
utils.workspace = true

[target.'cfg(unix)'.dependencies]
jemallocator = "^0.5"
