[package]
name = "bsky"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
environment = { path = "../environment" }
async_once = "^0.2"
lazy_static = "^1.4"
atrium-api = { version = "^0.24", features = ["tokio"] }
bsky-sdk = { version = "^0.1", features = ["config-toml"] }
chrono = "^0.4"
ipld-core = "^0.4"
thiserror = "^1.0"
tracing = "^0.1"
tokio = { version = "^1.37", features = ["rt-multi-thread", "macros"] }
atrium-xrpc = "^0.11"

