[package]
name = "bsky"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
environment.workspace = true
utils.workspace = true
async_once.workspace = true
lazy_static.workspace = true
atrium-api.workspace = true
bsky-sdk.workspace = true
chrono.workspace = true
ipld-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
atrium-xrpc.workspace = true
