[package]
name = "repositories"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
environment = { path = "../environment" }
utils = { path = "../utils" }
lazy_static = "^1.4"
async_once = "^0.2"
sqlx = { version = "^0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
tracing = "^0.1"
anyhow = "^1.0"
chrono = "^0.4"
tokio = "^1.37"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"