[package]
name = "repositories"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
environment.workspace = true
utils.workspace = true
lazy_static.workspace = true
async_once.workspace = true
sqlx.workspace = true
tracing.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true