[package]
name = "services"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
repositories = { path = "../repositories" }
utils = { path = "../utils" }
bsky = { path = "../bsky" }
tracing = "^0.1"
atrium-api = "^0.24"
tokio = "^1.37"
chrono = "^0.4"
anyhow = "^1.0"
lazy_static = "^1.4"
