[package]
name = "services"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
repositories.workspace = true
environment.workspace = true
utils.workspace = true
bsky.workspace = true
tracing.workspace = true
atrium-api.workspace = true
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
