[package]
name = "session"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
async_once = "^0.2"
lazy_static = "^1.4"
bsky-sdk = { version = "^0.1", features = ["config-toml"] }
chrono = "^0.4"
tracing = "^0.1"
environment = { path = "../environment" }
tokio = { version = "^1.37", features = ["rt-multi-thread", "macros"] }