[package]
name = "types"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
uuid = { version = "^1.10", features = ["v4", "fast-rng"]}
chrono = { version = "^0.4", features = ["serde"] }
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono"] }
url = "^2.5"
