[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-appender = "^0.2"
color-eyre = "^0.6"
environment = { path = "../environment" }
tokio = { version = "^1.37", features = ["rt-multi-thread", "fs"] }
atrium-api = "^0.24"
tracing-layer-discord = "^0.1"
regex = "^1.0"
debug_print = "^1.0"
