[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
color-eyre.workspace = true
environment.workspace = true
tokio.workspace = true
atrium-api.workspace = true
tracing-layer-discord.workspace = true
regex.workspace = true
debug_print.workspace = true
